EVALSYS-1239  Remove physical spaces in the markup and tinker with CSS to get number spacing of grouped items correct across supported browsers.
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@79186 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1602,7 +1602,7 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   min-width: 800px;
 }
 .evaluation .matrix .title {
-  min-width: 49%;
+  min-width: 40%;
 }
 .evaluation .matrix fieldset {
   margin: 0;
@@ -1662,6 +1662,10 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   float: left;
   padding-top: 20px;
 }
+.evaluation .scale .matrix label span, .evaluation .scale .matrix label input, .evaluation .scale .matrix legend .response-scale-label {
+  font-family: sans-serif !important;
+  font-size: 12px !important;
+}
 .evaluation .scale .matrix .content {
   margin: 0;
   padding: 0;
@@ -1692,13 +1696,13 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   border-right: 1px solid #CCCCCC;
 }
 .evaluation .scale .matrix .content label {
-  margin: 0;
   display: inline-block;
+  margin: 0;
   padding: 5px 15px;
-  font-size: 80%;
-  font-weight: bold;
+  font-family: sans-serif !important;
+  font-size: 12px !important;
   line-height: 100%;
-  text-transform: uppercase;
+  text-align: center;
   text-decoration: none !important;
   cursor: pointer !important;
   -webkit-border-radius: 4px 4px;
@@ -1707,10 +1711,6 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   -ms-border-radius: 4px / 4px;
   -khtml-border-radius: 4px / 4px;
   border-radius: 4px / 4px;
-  text-align: center;
-  font-weight: normal;
-  font-size: 100%;
-  text-transform: none;
 }
 .evaluation .scale .matrix .content label span {
   display: block;
@@ -1742,18 +1742,21 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   display: block;
   margin-top: 0.5em;
   text-align: right !important;
+  white-space: nowrap;
 }
 .evaluation .item-group .response-scale-label {
   display: inline-block;
-  padding: 0 17px;
+  padding: 0 19px;
   width: 12px;
-  font-size: 12px;
+  font-family: sans-serif !important;
+  font-size: 12px !important;
+  line-height: 100%;
   text-align: center;
 }
 .evaluation .item-group .response-scale-na {
   margin-right: 11px;
   width: 24px;
-  padding: 0 10px;
+  padding: 0 13px;
 }
 .evaluation .item-group > .content {
   display: inline-block;
@@ -1819,7 +1822,7 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   }
 
   .evaluation .item-group .response-group-labels span {
-    padding-left: 33px;
+    padding-left: 34px;
     width: 0;
   }
 
@@ -1844,7 +1847,6 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
 }
 .portletBody .matrix legend {
   font-weight: normal;
-  font-size: 90%;
   color: #000;
 }
 .portletBody .item-group .item .title .label {
@@ -1865,7 +1867,7 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   border: 1px solid #ffffff;
 }
 .evaluation .content .response-list label:hover, .evaluation .content .response-list label:focus {
-  color: #444444;
+  color: #000000;
   background: #ee4444;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #ffa500));
   background-image: -webkit-linear-gradient(#ffffff, #ffa500);
