--- a/tool/src/webapp/content/css/scss/ucb/_graphics-ucb.scss
+++ b/tool/src/webapp/content/css/scss/ucb/_graphics-ucb.scss
@@ -4,67 +4,6 @@
 // These styles define brand application and visual presentation specific to UCB.
 // All image references should be included here.
 
-@mixin button-style($type) {
-  font-family: verdana, sans-serif;
-  font-size: 11px;
-  @if $type == dark {
-		color: $graylight;
-		@include text-shadow(rgba($black,.7) 0 -1px 1px);
-		background: $dgraydarkest;
-		@include background-image(linear-gradient($dgraydarker, $dgraydarkest));
-		border: 1px solid $dgraydarkest;
-		&:hover, &:focus {
-			color: $white;
-			background: $black;
-			@include background-image(linear-gradient($dgraydarkest, $black));
-		}
-  } @else if $type == light {
-    color: $graydark;
-    text-shadow: none;
-    background: $white;
-    border: 1px solid $white;
-    &:hover, &:focus {
-      color: $text;
-      background: $c5lighter;
-      @include background-image(linear-gradient($white, $c5));
-      border-color: $c5;
-    }
-  } @else if $type == selected {
-    color: $white;
-    text-shadow: none;
-    background: $c1;
-    @include background-image(linear-gradient($c1light, $c1dark));
-    border: 1px solid $c1darker;
-    &:hover, &:focus {
-      color: $white;
-      background: $c1;
-      @include background-image(linear-gradient($c1light, $c1dark));
-      border-color: $c1darker;
-    }
-	} @else if $type == cancel {
-		color: $graydark;
-		text-shadow: none;
-		background: $graylightest;
-		@include background-image(linear-gradient($graylightest, $graylight));
-		border: 1px solid $graylight;
-		&:hover, &:focus {
-			color: $c1;
-			background: $white;
-			@include background-image(linear-gradient($white, $graylightest));
-		}
-	} @else {
-		color: $white;
-		@include text-shadow(rgba($black,.5) 0 -1px 1px);
-		background: $c5;
-		@include background-image(linear-gradient($c5light, $c5dark));
-		border: 1px solid $c5dark;
-		&:hover, &:focus {
-			background: $c5dark;
-			@include background-image(linear-gradient($c5light, $c5));
-		}
-	}
-}
-
 .portletBody {
 
   /////////////////////////
@@ -89,34 +28,31 @@
 /////////////////////////
 // Evaluation
 /////////////////////////
+
 .evaluation {
   .content {
+
     fieldset {
-      border: none;
       > legend {
         padding: 0;
         margin: 0;
       }
     }
-    .fake-fieldset, .fieldset, .legend {
+
+    // remove borders and alternating row colors.
+    fieldset, .fake-fieldset, .fieldset, .legend, .itemListNew, .itemListEval {
       border: none;
-    }
-    .legend {
-      margin: 0;
-      padding: 0;
-      top: 0;
-      left: 0;
-      position: static;
     }
     .itemListNew, .itemListEval {
-      border: none;
-      li, .itemScalePanel, .fullVertical li, .fullDisplayHorizontal li {
-        border: none !important;
+      li {
+        border-color: $white;
       }
       .itemsListOddLine {
         background: none;
       }
     }
+
+    // add styles to items (individual questions).
     .item {
       margin-bottom: 15px;
       border-bottom: 1px solid $c2lighter;
@@ -134,18 +70,11 @@
           color: $c4;
         }
       }
-    }
-    .response-list {
-      label {
-        @include button-style(light);
-      }
-      .selected {
-        @include button-style(selected);
-      }
-    }
+    } // end item
 
   } //end content
 
+  // add styles to grouped items.
   .item-group {
     border-bottom: 2px solid $graylightest;
     .title {
